# bubblewrap

./: Makefile-docs.am  README.md  autogen.sh  bubblewrap.c  configure.ac
demos/my-demos/: Makefile  capget.c  capmask.c  capset.c  captest.c  demo-cap.c  demo-prctl.c  demo-test.c  eventfd.c  get_current_dir_name.c  pivot-root.c  prctl_no_new_privs.c  prctl_set_keepcaps.c  raw-clone.c  setfsuid.c  setuid.sh  sigchild.c
